source/blender/render/extern/include/RE_bake.h
@@ -61,7 +61,9 @@ typedef struct BakeHighPolyData {
 	struct ModifierData *tri_mod;
 	struct Mesh *me;
 	char restrict_flag;
-	float mat_lowtohigh[4][4];
+	float mat_high[4][4];
+	float imat_high[4][4];
+	float scale;
 } BakeHighPolyData;
 
 /* external_engine.c */
@@ -80,7 +82,7 @@ bool RE_bake_internal(
 void RE_bake_pixels_populate_from_objects(
         struct Mesh *me_low, BakePixel pixel_array_from[],
         BakeHighPolyData highpoly[], const int tot_highpoly, const int num_pixels,
-        const float cage_extrusion);
+        const float cage_extrusion, float mat_low[4][4]);
 
 void RE_bake_pixels_populate(
         struct Mesh *me, struct BakePixel *pixel_array,
@@ -95,7 +97,7 @@ void RE_bake_normal_world_to_object(
         struct Object *ob, const BakeNormalSwizzle normal_swizzle[3]);
 void RE_bake_normal_world_to_tangent(
         const BakePixel pixel_array[], const int num_pixels, const int depth, float result[],
-        struct Mesh *me, const BakeNormalSwizzle normal_swizzle[3]);
+        struct Mesh *me, const BakeNormalSwizzle normal_swizzle[3], float mat[4][4]);
 void RE_bake_normal_world_to_world(
         const BakePixel pixel_array[], const int num_pixels, const int depth, float result[],
         const BakeNormalSwizzle normal_swizzle[3]);
